# claw-code

./: .containerignore  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  PARITY.md  analysis_store_trend.py
.githooks/: pre-push
analysis_output/: analysis.py  charts.py  forecast_analysis.py  forecast_chart.py  forecast_data.csv  forecast_summary.json  generate_chart.py  summary.json
deploy/: SERVICES.md
docs/: README.md  analysis-api-queryx-bff.md  architecture-governance.md  boundaries-claw-stack.md  chunk-render-density-metrics.md  claw-code-architecture.html  (+42 more)
rust/crates/ag-ui-claw-bridge/: Cargo.toml
rust/crates/ag-ui-claw-bridge/src/: agui_events.rs  gateway_client.rs  lib.rs  main.rs  server.rs
rust/crates/ag-ui-claw-bridge/tests/: mock_gateway_e2e.rs
rust/crates/claw-fc-sandbox-client/: Cargo.toml
rust/crates/claw-fc-sandbox-client/src/: client.rs  config.rs  e2b_platform.rs  lib.rs  nas_bootstrap.rs  nas_paths.rs  types.rs
rust/crates/claw-server/: Cargo.toml
rust/crates/claw-server/src/: auth.rs  blocking_client.rs  chat.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  profiles.rs  server.rs  workspaces.rs
rust/crates/claw-server/tests/: workspace_isolation.rs
rust/crates/gateway-solve-turn/: Cargo.toml
rust/crates/gateway-solve-turn/src/: agent_orchestration.rs  assistant_stream_spill.rs  entity_labels.rs  extra_session_bizdate.rs  gateway_stdout.rs  landlock_dsl.rs  landlock_jail.rs  lib.rs  mcp_call_context.rs  otel_solve_turn.rs  ovs_interactive.rs  preflight_runner.rs  project_language_pipeline.rs  project_orchestration.rs  project_preflight.rs  report_sse_server.rs  report_sse_timing.rs  session_report.rs  solve_timing.rs  sqlbot_preflight.rs  task_progress.rs  turn_language.rs  turn_output_stream.rs  turn_tools.rs  worker_env.rs
rust/crates/gateway-solve-turn/src/multi_agent/: event_bus.rs  mod.rs  narrator_lane.rs  orchestrator.rs  phase_turn.rs  phases.rs  plan.rs  planner_turn.rs  progress_sync.rs  query_fanout.rs  timeline.rs  timings.rs  writer_turn.rs
rust/crates/http-gateway-rs/: Cargo.toml  datasources.example.yaml
rust/crates/http-gateway-rs/migrations/: 001_baseline.sql  002_persistence.sql  003_client_origin.sql  004_session_db_pool.sql  005_proj_id.sql  005_proj_id_pre_revision.sql  006_cluster_id_scoping.sql  007_project_e2b_worker.sql  007_project_fc_worker.sql  008_worker_profile_json.sql  008_worker_rotation_log.sql  009_settings_json_e2b_keys.sql  010_preflight_plugin.sql  011_cluster_id_models.sql  012_project_e2b_worker_pool.sql  013_multi_gateway_cluster.sql  014_project_metadata.sql
rust/crates/http-gateway-rs/skills/: gpos-boss-report-writer.SKILL.md
rust/crates/http-gateway-rs/src/: admin_mcp_http.rs  admin_mcp_solve.rs  agui.rs  auth_audit.rs  biz_advice_report.rs  biz_advice_report_live.rs  biz_report_pool_proxy.rs  biz_report_sse_log.rs  claude_tap_health.rs  claw_tap_cluster_state.rs  client_origin.rs  cluster_identity.rs  cluster_scope.rs  deploy_image.rs  gateway_admin_mcp_token.rs  gateway_claw_tap_lifecycle.rs  gateway_claw_tap_settings.rs  gateway_e2b_core_readiness.rs  gateway_e2b_nas_api_settings.rs  gateway_e2b_nas_settings.rs  gateway_e2b_observe_proxy.rs  gateway_e2b_observe_reset.rs  gateway_e2b_observe_settings.rs  gateway_e2b_ovs_settings.rs  gateway_e2b_platform_settings.rs  gateway_e2b_singleton_api.rs  gateway_e2b_singleton_lifecycle.rs  gateway_e2b_worker_settings.rs  gateway_endpoint.rs  gateway_fc_nas_api_settings.rs  gateway_fc_nas_settings.rs  gateway_fc_observe_proxy.rs  gateway_fc_observe_reset.rs  gateway_fc_ovs_settings.rs  gateway_fc_worker_settings.rs  gateway_global_settings.rs  gateway_llm_cluster_store.rs  gateway_llm_config_sync.rs  gateway_llm_model_apply.rs  gateway_llm_model_revision.rs  (+47 more)
rust/crates/http-gateway-rs/src/persistence/: mod.rs  transcript.rs
rust/crates/http-gateway-rs/src/pool/: clients.rs  config.rs  docker_cli.rs  docker_pool.rs  e2b_nas_layout.rs  e2b_nas_layout_backend.rs  e2b_orchestrated_pool.rs  e2b_proj_worker_registry.rs  e2b_worker_llm_material.rs  fc_nas_layout.rs  fc_nas_layout_backend.rs  fc_orchestrated_pool.rs  fc_proj_worker_registry.rs  guest_materialize_tar.rs  http_server.rs  live_report_hub.rs  live_report_sse.rs  local_ops.rs  mod.rs  result.rs  rpc.rs  sandbox_orchestrator.rs  session_db_sync.rs  session_mount_ownership.rs  slot_mount.rs  stdout_hooks.rs  traits.rs  worker_identity.rs  worker_isolation.rs  worker_profile.rs  worker_report_endpoint.rs
rust/crates/http-gateway-rs/src/pool/interactive_backend/: e2b_interactive.rs  e2b_interactive_materialize.rs  e2b_nas_api_singleton.rs  e2b_worker_tap.rs  fc_interactive.rs  fc_interactive_materialize.rs  fc_nas_api_singleton.rs  fc_ovs_claw_vscode.rs  fc_ovs_singleton.rs  fc_session_observe_singleton.rs  fc_warm_pool.rs  fc_worker_tap.rs  mod.rs  podman_interactive.rs  ttyd_url.rs
rust/crates/http-gateway-rs/tests/: global_llm_api.rs  report_per_turn_db.rs
rust/crates/telemetry/: Cargo.toml
rust/crates/telemetry/examples/: langfuse_smoke.rs
rust/crates/telemetry/src/: lib.rs  otel.rs
rust/crates/telemetry/tests/: langfuse_otel_smoke.rs
sandbox/: Cargo.toml  README.md
sandbox/.cargo/: config.toml.example
sandbox/crates/claw-sandbox-client/: Cargo.toml
sandbox/crates/claw-sandbox-client/src/: config.rs  lib.rs  registry_env.rs  rpc.rs  sandbox_rpc.rs  traits.rs
sandbox/crates/claw-sandbox-protocol/: Cargo.toml  openapi.yaml
sandbox/crates/claw-sandbox-protocol/src/: guest.rs  isolation.rs  legacy_rpc.rs  lib.rs  registry.rs  sandbox_rpc.rs  session.rs  turn.rs  types.rs
sandbox/crates/claw-sandbox-server/: Cargo.toml
sandbox/crates/claw-sandbox-server/src/: lib.rs  main.rs  registry.rs  registry_db.rs
sandbox/crates/claw-sandbox-server/src/pool/: config.rs  docker_pool.rs  guest_io.rs  http_server.rs  live_report_hub.rs  local_ops.rs  mod.rs  rpc.rs  sandbox_rpc.rs  sandbox_stream.rs  worker_identity.rs  worker_isolation.rs
sandbox/crates/claw-sandbox-server/src/runtime/: mod.rs
sandbox/docs/: gateway-integration.md  system-design.md
(+990 files in other folders)
