[package]
name = "claw-fc-sandbox-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Alibaba FC cloud sandbox (E2B-compatible REST) client. Author: kejiqing"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "io-util"] }
tracing = "0.1"

[lints]
workspace = true
