[package]
name = "claw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "claw-server"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.7", features = ["macros", "json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
hex = "0.4"
runtime = { path = "../runtime" }
tools = { path = "../tools" }
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
