[package]
name = "gateway-solve-turn"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tools = { path = "../tools" }
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
