[package]
name = "http-gateway-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
http = "1"
serde_yaml = "0.9"
runtime = { path = "../runtime" }
api = { path = "../api" }
tools = { path = "../tools" }
telemetry = { path = "../telemetry" }
gateway-solve-turn = { path = "../gateway-solve-turn" }


[lints]
workspace = true
