[package]
name = "http-gateway-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "http_gateway_rs"
path = "src/lib.rs"

[[bin]]
name = "http-gateway-rs"
path = "src/main.rs"

[[bin]]
name = "claw-pool-daemon"
path = "src/bin/claw-pool-daemon.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["v4", "v5"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
http = "1"
serde_yaml = "0.9"
runtime = { path = "../runtime" }
api = { path = "../api" }
tools = { path = "../tools" }
telemetry = { path = "../telemetry" }
gateway-solve-turn = { path = "../gateway-solve-turn" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
