[package]
name = "claw-sandbox-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
authors.workspace = true
description = "Gateway-side Sandbox RPC client. Author: kejiqing"

[dependencies]
async-trait.workspace = true
base64 = "0.22"
claw-sandbox-protocol = { path = "../claw-sandbox-protocol" }
futures-util = "0.3"
gateway-solve-turn = { path = "../../../rust/crates/gateway-solve-turn" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
tracing = "0.1"

[dev-dependencies]
gateway-solve-turn = { path = "../../../rust/crates/gateway-solve-turn" }

[lints]
workspace = true
