[package]
name = "claw-sandbox-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
authors.workspace = true
description = "claw-sandbox worker pool service. Author: kejiqing"

[lib]
name = "claw_sandbox_server"
path = "src/lib.rs"

[[bin]]
name = "claw-sandbox"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1"
claw-sandbox-protocol = { path = "../claw-sandbox-protocol" }
futures-util = "0.3"
gateway-solve-turn = { path = "../../../rust/crates/gateway-solve-turn" }
telemetry = { path = "../../../rust/crates/telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "json", "uuid"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
